[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:app"
